k8s/70-selenium.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: ecommerce-demo
spec:
  selector:
    app: selenium-hub
  ports:
    - port: 4444
      targetPort: 4444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: ecommerce-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: selenium-hub
          image: selenium/hub:4.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4444
            - containerPort: 4442
            - containerPort: 4443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
  namespace: ecommerce-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-chrome
  template:
    metadata:
      labels:
        app: selenium-chrome
    spec:
      containers:
        - name: chrome
          image: selenium/node-chromium:4.27.0
          imagePullPolicy: IfNotPresent
